# shuriken

./: .gitignore  README.md  Shuriken.pro  TODO  build  index.html  params.json  resources.qrc
debug/.ui/: ui_aboutdialog.h  ui_applygaindialog.h  ui_applygainrampdialog.h  ui_audiosetupdialog.h  ui_helpform.h  ui_mainwindow.h  ui_optionsdialog.h
docs/: about.html  index.html
images/: README
packaging/: shuriken.desktop
release/: shuriken
release/.ui/: ui_aboutdialog.h  ui_applygaindialog.h  ui_applygainrampdialog.h  ui_helpform.h  ui_mainwindow.h  ui_optionsdialog.h
resources/akai/: Template.pgm
resources/docs/: about.html  help.html  index.html
resources/images/: README
resources/stylesheets/: blue_theme.qss  blue_theme_4.6.qss
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  akaifilehandler.cpp  akaifilehandler.h  applygaindialog.cpp  applygaindialog.h  applygaindialog.ui  applygainrampdialog.cpp  applygainrampdialog.h  applygainrampdialog.ui  audioanalyser.cpp  audioanalyser.h  audiofilehandler.cpp  audiofilehandler.h  audiosetupdialog.cpp  audiosetupdialog.h  audiosetupdialog.ui  calcbpmdialog.cpp  calcbpmdialog.h  calcbpmdialog.ui  commands.cpp  commands.h  confirmbpmdialog.cpp  confirmbpmdialog.h  confirmbpmdialog.ui  directoryvalidator.cpp  directoryvalidator.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  framemarkeritem.cpp  framemarkeritem.h  globals.cpp  globals.h  helpform.cpp  helpform.h  helpform.ui  jackoutputsdialog.cpp  jackoutputsdialog.h  (+46 more)
src/Graffik_Legacy/: basiceventfilter.cpp  basiceventfilter.h  skinneddial.cpp  skinneddial.cpp.orig  skinneddial.h
src/JuceLibraryCode/: AppConfig.h  JuceHeader.h  README  README.txt
src/JuceLibraryCode/modules/drowaudio/: dRowAudio.h
src/JuceLibraryCode/modules/drowaudio/dRowAudio/: dRowAudio.cpp  dRowAudio.h
src/JuceLibraryCode/modules/drowaudio/dRowAudio/audio/: dRowAudio_AudioUtility.h  dRowAudio_SoundTouchAudioSource.cpp  dRowAudio_SoundTouchProcessor.cpp  dRowAudio_SoundTouchProcessor.h
src/JuceLibraryCode/modules/drowaudio/dRowAudio/audio/soundtouch/: STTypes.h
src/JuceLibraryCode/modules/drowaudio/dRowAudio/utility/: dRowAudio_DebugObject.h  dRowAudio_Utility.h
src/JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.cpp  juce_audio_basics.h
src/JuceLibraryCode/modules/juce_audio_basics/synthesisers/: juce_Synthesiser.cpp
src/JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.cpp  juce_audio_devices.h
src/JuceLibraryCode/modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp  juce_AudioDeviceManager.h  juce_AudioIODevice.cpp  juce_AudioIODevice.h
src/JuceLibraryCode/modules/juce_audio_devices/native/: jack_device.h  juce_linux_JackAudio.cpp  juce_linux_Midi.cpp  juce_linux_Midi.cpp.orig  linux_midi.h  relay_libjack.cpp
src/JuceLibraryCode/modules/juce_core/: juce_core.cpp  juce_core.h
src/JuceLibraryCode/modules/juce_core/containers/: juce_HashMap.h
src/JuceLibraryCode/modules/juce_core/system/: juce_SystemStats.cpp
src/JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.cpp  juce_data_structures.h
src/JuceLibraryCode/modules/juce_events/: juce_events.cpp  juce_events.h
src/SndLibShuriken/: COPYING  HISTORY.sndlib  README.sndlib  _sndlib.h  config.status  configure  configure.ac  headers.c  io.c  makefile  makefile.in  mus-config.h  sndinfo.c  sndlib-config  sndlib-config.in  sndlib-strings.h  sndlib.h  sndlib.html  sndlib.pc  sndlib.pc.in  sndplay.c  sound.c  unix-config.h  unix-config.h.in
src/SndLibShuriken/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/nonlib/: nsm.h
stylesheets/: stylesheet.css
